--- a/xcx-active/pages/index/index.wxml
+++ b/xcx-active/pages/index/index.wxml
@@ -27,11 +27,11 @@
       <!--{{item.img?item.img:item.defauliImg}}-->
         <image src="../../images/list1.jpg"></image>
         <text class="product-tit ellipsis">{{item.brand}}{{item.itemName}}</text>
-        <text class="product-pro">{{item.companyName}}</text>
+        <text class="product-pro">由{{item.companyName}}提供发货和售后服务</text>
         <view class="product-info">
           <text class="specifications">{{item.norm}}/{{item.units}}</text>
-          <text>￥</text>
-          <text class="price">{{item.retailPrice}}</text>
+          <text hidden="{{item.retailPrice == 0 ? true : ''}}">￥</text>
+          <text class="price">{{item.retailPrice == 0 ? '商品待定' : (item.retailPromotionPrice > 0 ? item.retailPromotionPrice : item.retailPrice)}}</text>
         </view>
         <view class="operation-group" data-index="{{index}}">
           <view class="operation">
@@ -39,8 +39,8 @@
             <input class="operation-result" disabled="true" value="{{item.moq <= 1 ? 1 : item.moq}}" type="number" />
             <text class="incr-btn" bindtap="incrFn" data-cartid="{{item.id}}">+</text>
           </view>
-          <button class="join-shoppingcar-btn" data-shopcar="false" data-cartid="{{item.id}}" bindtap="joinCarFn">加入购物车</button>
-          <button class="purchase-btn" data-cartid="{{item.id}}" bindtap="purchaseFn">立即购买</button>
+          <button class="join-shoppingcar-btn" data-shopcar="false" data-cartid="{{item.id}}" bindtap="{{item.retailPrice == 0 ? 'tipFn' : 'joinCarFn'}}">加入购物车</button>
+          <button class="purchase-btn" data-cartid="{{item.id}}" bindtap="{{item.retailPrice == 0 ? 'tipFn' : 'purchaseFn'}}">立即购买</button>
         </view>
       </view>
     </view>
