--- a/xcx-active/pages/shoppingcar/shoppingcar.wxml
+++ b/xcx-active/pages/shoppingcar/shoppingcar.wxml
@@ -1,7 +1,6 @@
 <view class="container">
         <view class="shopping-list" wx:for="{{shoppingListData}}" wx:key="i">
-        <!--{{item.img ? item.img : item.defauliImg}}-->
-          <image src="../../images/list1.jpg"  bindtap="orderDetailFn"></image>
+          <image src="{{item.img ? item.img : item.defauliImg}}"></image>
           <view class="info-wrap">
             <text class="tit ellipsis">{{item.brand}}{{item.itemName}}</text>
             <view class="price-info">
