--- a/xcx-active/pages/orderConfirm/orderConfirm.wxml
+++ b/xcx-active/pages/orderConfirm/orderConfirm.wxml
@@ -7,7 +7,7 @@
 
   <!--订单列表-start-->
   <view class="order-con" wx:for="{{orderData}}" wx:key="i">
-    <image src="{{item.img ? item.img : item.defauliImg}}"></image>
+    <image src="{{gConfig.imgPath}}{{item.img ? item.img : item.defauliImg}}"></image>
     <view class="order-info">
       <text class="order-tit ellipsis">{{item.brand}}{{item.itemName}}</text>
       <text class="order-pro ellipsis2">由{{item.companyName}}提供发货和售后服务</text>
