--- a/xcx-active/pages/orderList/orderList.wxss
+++ b/xcx-active/pages/orderList/orderList.wxss
@@ -1,4 +1,5 @@
 /* pages/orderList/orderList.wxss */
+.noDataTip {margin: 200rpx auto;text-align: center;color: #999;font-size: 30rpx;}
 .order-tabBar {
     display: flex;
     overflow: hidden;
