--- a/xcx-active/pages/shoppingcar/shoppingcar.wxml
+++ b/xcx-active/pages/shoppingcar/shoppingcar.wxml
@@ -1,20 +1,21 @@
 <view class="container">
-        <view class="shopping-list" wx:for="{{shoppingListData}}" wx:key="i">
-          <image src="{{imgPath}}{{item.img ? item.img : item.defauliImg}}"></image>
-          <view class="info-wrap">
-            <text class="tit ellipsis">{{item.brand}}{{item.itemName}}</text>
-            <view class="price-info">
-              <text>{{item.norm}}/{{item.units}}</text>
-              <text class="price">￥{{(item.retailPrice > 0 && item.retailPromotionPrice > 0)? item.retailPromotionPrice : item.retailPrice}}</text>
-            </view>
-            <view class="operation">
-              <text data-cartid="{{item.id}}" class="decr-btn" bindtap="decrFn">-</text>
-              <input class="operation-result" bindinput="goodsNumFn" data-numid="{{item.id}}" value="{{item.moq <= 1 ? 1 : item.moq}}" type="number" placeholder="1"/>
-              <text data-cartid="{{item.id}}" hover-class="hover" class="incr-btn" bindtap="incrFn" >+</text>
-            </view>
-          </view>
-          <text class="del-order" bindtap="removeFn" data-cartid="{{item.id}}"></text>
-        </view>
+  <view class="shopping-list" wx:for="{{shoppingListData}}" wx:key="i">
+    <image src="{{imgPath}}{{item.img ? item.img : item.defauliImg}}"></image>
+    <view class="info-wrap">
+      <text class="tit ellipsis">{{item.brand}}{{item.itemName}}</text>
+      <view class="price-info">
+        <text>{{item.norm}}/{{item.units}}</text>
+        <text class="price">￥{{(item.retailPrice > 0 && item.retailPromotionPrice > 0)? item.retailPromotionPrice : item.retailPrice}}</text>
+      </view>
+      <view class="operation">
+        <text data-cartid="{{item.id}}" class="decr-btn" bindtap="decrFn">-</text>
+        <input class="operation-result" bindinput="goodsNumFn" data-numid="{{item.id}}" value="{{item.moq <= 1 ? 1 : item.moq}}" type="number" placeholder="1" />
+        <text data-cartid="{{item.id}}" hover-class="hover" class="incr-btn" bindtap="incrFn">+</text>
+      </view>
+    </view>
+    <text class="del-order" bindtap="removeFn" data-cartid="{{item.id}}"></text>
+  </view>
+  <view class="noDataTip" hidden="{{isDataTip}}">暂无相关数据</view>
 </view>
 <view class="footBar">
   <view class="totail-price" bindtap="sumcalcFn">合计￥{{totalPrice}}</view>
