--- a/xcx-active/pages/shoppingcar/shoppingcar.wxss
+++ b/xcx-active/pages/shoppingcar/shoppingcar.wxss
@@ -1,4 +1,5 @@
 /* pages/shoppingcar/shoppingcar.wxss */
+.noDataTip {margin: 200rpx auto;text-align: center;color: #999;font-size: 30rpx;}
 .operation {float: left;}
 .container {
     padding-bottom: 130rpx;
